--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,107 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+#----------------------------------
+# Keypair and SSH related files
+#----------------------------------
+# Ignore SSH keypair files
+.ssh/id_rsa
+.ssh/id_rsa.pub
+*.pub
+*.pem
+*.rsa
+*.dsa
+*.ppk
 
-# Test binary, built with `go test -c`
-*.test
+# Ignore SSH configuration and known_hosts
+.ssh/config
+.ssh/known_hosts
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+#----------------------------------
+# Token
+#----------------------------------
+# Ignore authentication tokens and secrets
+*.token
+*.secret
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+#----------------------------------
+# DS_Store
+#----------------------------------
+.DS_Store
 
-# Go workspace file
-go.work
+#----------------------------------
+# vi/vim
+#----------------------------------
+*.swp
+*.swo
+
+#----------------------------------
+# Hugo
+#----------------------------------
+.hugo_build.lock
+
+resources/
+# resources caches some files to speed up generation.
+# Can be also used by template authors to distribute built SASS files,
+# so you don’t have to have the preprocessor installed.
+# Note: resources directory is not created by default.
+# Docs: https://gohugo.io/getting-started/directory-structure/
+
+#----------------------------------
+# AWS CLI
+#----------------------------------
+# Ignore AWS config and credential files
+.aws/*
+*.aws
+
+# Ignore AWS credentials file
+credentials
+
+# Ignore AWS config file
+config
+
+#----------------------------------
+# Git
+#----------------------------------
+# Ignore git configuration files
+.gitconfig
+.gitconfig-*
+
+config-*
+!git/config
+!git/config-sample
+
+#----------------------------------
+# Terraform
+#----------------------------------
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+*.tfvars
+*.tfvars.json
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
