--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,45 +1,4 @@
-# Workflow to build and deploy site to Github Pages using Hugo
-
-# Name of Workflow
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "deploy"
-  deploy:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-
-      # Step 1 - Checks-out your repository under $GITHUB_WORKSPACE
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: true  # Fetch Hugo themes
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-
-      # Step 2 - Sets up the latest version of Hugo
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: 'latest'
-
-      # Step 3 - Clean and don't fail
-      - name: Clean public directory# .github/workflows/gh-pages.yml
-#
-# References:
-# - https://github.com/marketplace/actions/hugo-setup
-# - https://jpanther.github.io/congo/docs/hosting-deployment/#github-pages
-
-name: GitHub Pages
-
+name: build and deploy github page
 on:
   push:
     branches:
@@ -55,6 +14,7 @@ jobs:
       - name: ✅ Checkout
         uses: actions/checkout@v3
         with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
       - name: 🔨 Setup Hugo
@@ -73,7 +33,8 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./public
-        run: rm -rf public
+
+      - run: rm -rf public
 
       # Step 4 - Builds the site using the latest version of Hugo
       # Also specifies the theme we want to use
