--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,7 +42,7 @@ jobs:
 
       # Step 5 - Create name file
       - name: Create cname file
-        run: echo 'freshswift.net' > public/CNAME
+        run: echo 'niedbalski.dev' > public/CNAME
 
       # Step 6 - Push our generated site to our gh-pages branch
       - name: Deploy
