--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,7 +40,7 @@ jobs:
       # Step 4 - Builds the site using the latest version of Hugo
       # Also specifies the theme we want to use
       - name: Build
-        run: hugo --theme=fresh
+        run: hugo --theme=minima
 
       # Step 5 - Create name file
       - name: Create cname file
