--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,10 +22,9 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: "latest"
-          # extended: true
 
       - name: 🧱 Build
-        run: hugo --minify
+        run: hugo
 
       - name: 🏄‍♂️ Deploy
         uses: peaceiris/actions-gh-pages@v3
