--- a/config.yaml
+++ b/config.yaml
@@ -40,8 +40,8 @@ author:
   status: Hi 👋, I'm Jorge Niedbalski.
   description: |
     
-    I'm a passionate systems engineer with expertise in developing, testing, and automating 
-    Linux-based infrastructure. 
+    I'm a systems engineer and open source advocate with expertise in developing, testing, and automating 
+    Linux-based infrastructure.
     
     My current role is as a technical lead for the Backend team at [Calyptia Inc](https://calyptia.com), 
     where we're building an observability platform on top of [Fluentbit](https://fluentbit.io) using C, Golang, 
