--- a/config.yaml
+++ b/config.yaml
@@ -40,18 +40,11 @@ author:
   status: Hi 👋, I'm Jorge Niedbalski.
   description: |
     
-    I'm a systems engineer and open source advocate with expertise in developing, testing, and automating 
-    Linux-based infrastructure.
-    
-    My current role is as a technical lead for the Backend team at [Calyptia Inc](https://calyptia.com), 
-    where we're building an observability platform on top of [Fluentbit](https://fluentbit.io) using C, Golang, 
-    and cloud native technologies.
+    I'm a systems engineer with a passion for all things open source and Linux.
   
-    Prior to my current position, I had the opportunity to work as a Senior Software Engineer at [Canonical](https://canonical.com), 
-    where I gained a lot of experience debugging and throubleshooting Linux systems. Before that, 
-    I was part of the [Linaro](https://linaro.org) team, where I had the exciting responsibility of driving the [cloud 
-    on arm64](https://linaro.cloud) initiative.
+    These days, I'm a technical lead for [Calyptia Inc](https://calyptia.com)'s Backend team, mixing C, Golang, and cloud native tech to build an observability platform on top of [Fluentbit](https://fluentbit.io).
+  
+    Before this, I was a Senior Software Engineer at [Canonical](https://canonical.com), knee-deep in debugging Linux systems, and even worked with [Linaro](https://linaro.org)'s team, driving their cloud on arm64 initiative.
     
-    If you're interested in learning more about my professional background, 
-    please feel free to check out my [linkedin](https://linkedin.com/jniedbalski) profile. 
-    I'm always open to connecting with fellow professionals and discussing exciting opportunities.
+    My [Linkedin](https://linkedin.com/niedbalskir)'s open! I'm always open to connecting with fellow professionals and discussing exciting opportunities.
+
