--- a/config.yaml
+++ b/config.yaml
@@ -6,9 +6,10 @@ copyright: © 2023
 googleAnalytics: G-C178BN4JD5
 
 params:
+  Description: "Systems Engineer passionate about Open Source and Linux. Expert in C, Golang, and cloud-native tech."
   displayDate: true
   displayDescription: true
-  # selectable specifies whether or not your post content can be selected.
+  # selectable specifies whether your post content can be selected.
   selectable: true
   social:
     - name: "twitter"
@@ -34,7 +35,7 @@ markup:
     lineNos: true
     noClasses: false
 
-# author specifies your name, a slogon and your brief self-introduction.
+# author specifies your name, a slogan and your brief self-introduction.
 author:
   name: Jorge Niedbalski
   status: Hi 👋, I'm Jorge Niedbalski.
@@ -42,9 +43,11 @@ author:
     
     I'm a systems engineer with a passion for all things open source and Linux.
   
-    These days, I'm a technical lead for [Calyptia Inc](https://calyptia.com)'s Backend team, mixing C, Golang, and cloud native tech to build an observability platform on top of [Fluentbit](https://fluentbit.io).
+    These days, I'm a technical lead for [Calyptia Inc](https://calyptia.com)'s Backend team, mixing C, Golang, 
+    and cloud native tech to build an observability platform on top of [Fluentbit](https://fluentbit.io).
   
-    Before this, I was a Senior Software Engineer at [Canonical](https://canonical.com), knee-deep in debugging Linux systems, and even worked with [Linaro](https://linaro.org)'s team, driving their cloud on arm64 initiative.
+    Before this, I was a Senior Software Engineer at [Canonical](https://canonical.com), 
+    knee-deep in debugging Linux systems, and even worked with [Linaro](https://linaro.org)'s team, driving their cloud on arm64 initiative.
     
     My [Linkedin](https://linkedin.com/niedbalskir)'s open! I'm always open to connecting with fellow professionals and discussing exciting opportunities.
 
