--- a/config.yaml
+++ b/config.yaml
@@ -49,5 +49,5 @@ author:
     Before this, I was a Senior Software Engineer at [Canonical](https://canonical.com), 
     knee-deep in debugging Linux systems, and even worked with [Linaro](https://linaro.org)'s team, driving their cloud on arm64 initiative.
     
-    My [Linkedin](https://linkedin.com/niedbalskir)'s open! I'm always open to connecting with fellow professionals and discussing exciting opportunities.
+    My [Linkedin](https://www.linkedin.com/in/niedbalskir/)'s open! I'm always open to connecting with fellow professionals and discussing exciting opportunities.
 
