--- a/config.yaml
+++ b/config.yaml
@@ -41,9 +41,9 @@ author:
   status: Hi 👋, I'm Jorge Niedbalski.
   description: |
     
-    I'm a systems engineer with a passion for all things open source and Linux.
+    I'm a systems engineer with a passion for all things related to infrastructure, open source and Linux.
   
-    These days, I'm a technical lead for [Calyptia Inc](https://calyptia.com)'s Backend team, mixing C, Golang, 
+    These days, I work as technical lead for [Calyptia Inc](https://calyptia.com)'s Backend team, mixing C, Golang, 
     and cloud native tech to build an observability platform on top of [Fluentbit](https://fluentbit.io).
   
     Before this, I was a Senior Software Engineer at [Canonical](https://canonical.com), 
