--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,8 @@ jobs:
       - name: 🔨 Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: "latest"
+          hugo-version: '0.152.2'
+          extended: true
 
       - name: 🧱 Build
         run: hugo --minify
@@ -52,3 +53,4 @@ jobs:
       - name: 🏄‍ Deploy
         id: deployment
         uses: actions/deploy-pages@v1
+
