--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,30 +1,29 @@
 name: build and deploy github page
+
 on:
   push:
-    branches:
-      - main  # Set a branch to deploy
+    branches: [main]
   pull_request:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - name: ✅ Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: 🔨 Setup Hugo
+      - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.128.0'
           extended: true
 
-      - name: 🧱 Build
+      - name: Build
         run: hugo --minify
 
       - name: Upload artifact
@@ -32,25 +31,12 @@ jobs:
         with:
           path: ./public
 
-  # Deployment job
   deploy:
-    # Add a dependency to the build job
     needs: build
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
-    runs-on: ubuntu-latest
     steps:
-      - name: 🏄‍ Deploy
+      - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
-
